--- a/ui/src/style.css
+++ b/ui/src/style.css
@@ -24,8 +24,7 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  display: block;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -61,8 +60,8 @@ button:focus-visible {
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  padding: 2rem 2rem 3rem;
+  text-align: left;
 }
 
 @media (prefers-color-scheme: light) {
